# fpsim

./: .gitignore  .nojekyll  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DMPASC_IMPLEMENTATION_SUMMARY.md  README.md  conduct.html  contributing.html  index.html  mkdocs.build.yml  mkdocs.yml  overview.html  pyproject.toml  search.json  setup.py  tutorials.html  whats-new.html
MARKDOWNS/: REMOVE_METHOD_FEATURE.md  REMOVE_METHOD_QUICKSTART.md
api/: analyzers.html  arrays.html  calibration.html  defaults.html  demographics.html  education.html  experiment.html  fpmod.html  index.html  interventions.html  methods.html  parameters.html  people.html  plotting.html  scenarios.html  settings.html  sim.html  utils.html
calib_results/: ethiopia_calib.sim
docs/: .gitignore  README.md  _quarto.yml  _variables.yml  api.md  build_docs  clean_all  contributing.md  index.md  index.rst  install.sh  overview.md  publish  quarto_utils.py  requirements.txt  run_tutorials  tutorials.md  wrappers_guide.rst  wrappers_quickstart.rst
examples/: README_dmpasc.md  example_add_method.py  example_add_new_method.py  example_calib_auto.py  example_calib_manual.py  example_dmpasc.py  example_method_intervention_usage.py  example_remove_method.py  plots.py
fpsim/: __init__.py  analyzers.py  calibration.py  defaults.py  demographics.py  education.py  experiment.py  fpmod.py  interventions.py  methods.py  parameters.py  people.py  plotting.py  pregnancy.py  scenarios.py  sim.py  utils.py  version.py  wrappers.py
tests/: baseline.json  benchmark.json  (+16 more)
(+95 files in other folders)
