[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fpsim"
dynamic = ["version"]
description = "FPsim: Family Planning Simulator"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["family planning", "women's health", "agent-based model", "simulation"]

authors = [
  { name = "Michelle O'Brien", email = "info@fpsim.org" },
  { name = "Annie Valente" },
  { name = "Cliff Kerr" },
  { name = "Robyn Stuart" },
  { name = "Paula Sanz-Leon" },
  { name = "Aasli Nur" },
  { name = "Ryan Hull" },
  { name = "Daniel Klein" },
  { name = "Emily Driano" },
  { name = "Marita Zimmermann" },  
]

classifiers = [
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
    "numba",
    "scipy",
    "starsim>=3.1.0",
    "pandas>=1.3",
    "sciris>=2.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.9",
    "optuna",
    "plotnine",
    "pyarrow",
    "pyyaml",
]

[project.urls]
"Website" = "http://fpsim.org"
"Source" = "https://github.com/fpsim/fpsim/"

[tool.setuptools.packages.find]
where = ["."]
include = ["fpsim*"]

[tool.setuptools.dynamic]
version = {attr = "fpsim.version.__version__"}
